[chore] 1. apk 빌드 시 파일명 지정한 대로 나오도록 build.gradle 수정

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ captures/
 .cxx/
 *.apk
 output.json
+output-metadata.json
 
 # IntelliJ
 *.iml
@@ -25,6 +26,7 @@ render.experimental.xml
 # Keystore files
 *.jks
 *.keystore
+*.properties
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
