[chore] 1. gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ render.experimental.xml
 # Keystore files
 *.jks
 *.keystore
-*.properties
+keystore.properties
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
