--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,6 @@
 buildscript {
     ext {
-        androidx_version = '1.7.0'
-        appcompat_version = '1.5.1'
-        constraintlayout_version = '2.1.4'
-        lifecycle_version = '2.5.1'
-        work_version = '2.7.1'
-        coroutines_version = '1.6.1'
         koin_version = '3.2.0'
-        rxKotlin_version = '3.0.0'
-        rxAndroid_version = '3.0.0'
-        rx3Bridge_version = '3.0.0'
-        tedActivityResult_version = '1.1.2'
-        tedpermission_version = '3.3.0'
-        junit_version = '4.13.2'
-        junit_android_version = '1.1.3'
-        espresso_core_version = '3.4.0'
     }
     repositories {
         mavenCentral()
@@ -30,3 +16,5 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
+
+apply from: "dependencies.gradle"
