--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 buildscript {
     ext {
         koin_version = '3.2.0'
+        navigation_version = '2.5.3'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
+        // Koin
         classpath "io.insert-koin:koin-gradle-plugin:$rootProject.koin_version"
+
+        // Navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$rootProject.navigation_version"
     }
 }
 
