[feat] 1. 설정 화면 구성
[todo]
1. 실제 설정 적용 기능 추가 필요

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,6 +144,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$rootProject.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycle_version"
 
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:$rootProject.dataStore_pref_version"
+
     // Koin
     implementation "io.insert-koin:koin-core:$rootProject.koin_version"
     implementation "io.insert-koin:koin-android:$rootProject.koin_version"
