[chore] 1. apk 파일 네이밍 로직 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ def createApk() {
     android.applicationVariants.all { variant ->
         variant.outputs.all { output ->
             if (outputFileName.endsWith('.apk')) {
-                def appName = "DeviceInfo"
+                def appName = "deviceinfo"
                 def date = new Date().format('yyyyMMdd')
                 def dir = "./apk/" + variant.versionName + "(" + variant.versionCode + ")"
                 def apk = appName + "-" + variant.versionName + "-" + date + ".apk"
