feat: 앱 종료 로직 분리 - 앱 종료 전용 액티비티 생성 - 앱 종료 로직을 애플리케이션에서 분리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,14 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
 
+        <!-- ClearTaskActivity -->
+        <activity
+            android:name=".utils.ExitActivity"
+            android:configChanges="screenSize|orientation"
+            android:screenOrientation="unspecified"
+            android:theme="@style/AppTheme.Transparent"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+
     </application>
 
 </manifest>
