--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.screen.splash.SplashActivity"
+            android:name=".ui.screen.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,12 +36,13 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
         </activity>
 
-        <activity
-            android:name=".ui.screen.main.MainActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <!--        <activity-->
+        <!--            android:name=".ui.screen.main.MainActivity"-->
+        <!--            android:screenOrientation="portrait"-->
+        <!--            android:windowSoftInputMode="adjustResize|stateHidden" />-->
 
         <activity
             android:name=".ui.screen.setting.SettingActivity"
